reenable sizeOf with java 9 module hint.